Funciona tanto el hanoi, como el hanoi gráfico. Funcionan también las 3 funciones para combinatoria.  TODO:  - Hacer el menú.  - Añadir métricas de tiempo.

--- a/p2/makefile
+++ b/p2/makefile
@@ -8,7 +8,7 @@ all: $(BIN)
 $(BIN): $(OBJECT)
 	g++ -o $(BIN) $(OBJECT)
 
-$(OBJECT): *.cpp #*.hpp
+$(OBJECT): *.cpp *.hpp
 	g++ $(CPPFLAGS) main.cpp
 
 clean:
