--- a/p4/CMakeLists.txt
+++ b/p4/CMakeLists.txt
@@ -3,5 +3,5 @@ project(p4)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp algorithms.hpp)
 add_executable(p4 ${SOURCE_FILES})
