Práctica terminada. Clase de estadísticos no comentada por falta de tiempo

--- a/p5/makefile
+++ b/p5/makefile
@@ -3,7 +3,6 @@ OBJECT = main.o
 BIN = main
 
 all: $(BIN)
-	rm -rf $(OBJECT)
 
 main: $(OBJECT)
 	g++ -o $(BIN) $(OBJECT)
@@ -12,5 +11,4 @@ main.o: *.cpp *.hpp
 	g++ $(CPPFLAGS) main.cpp
 
 clean:
-	rm -rf $(OBJECT) $(BIN)
-
+	@rm -rf $(OBJECT) $(BIN) *.eps *.dat
