Ya va cogiendo forma esto

--- a/p6/CMakeLists.txt
+++ b/p6/CMakeLists.txt
@@ -3,5 +3,5 @@ project(p6)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp solution.hpp reinas.hpp main.hpp)
+set(SOURCE_FILES main.cpp solution.hpp reinas.hpp main.hpp cmake-build-debug/reinas_bonito.hpp.hpp)
 add_executable(p6 ${SOURCE_FILES})
