--- a/p6/CMakeLists.txt
+++ b/p6/CMakeLists.txt
@@ -3,5 +3,5 @@ project(p6)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp reinas.hpp main.hpp main_auxiliar.hpp)
+set(SOURCE_FILES main.cpp reinas.hpp main.hpp extra_functions.hpp)
 add_executable(p6 ${SOURCE_FILES})
